# es-ojt-api

./: .dockerignore  .env  .flake8  .gitignore  Dockerfile  Makefile  README.md  asgi.py  docker-compose-dev-all.yml  docker-compose-dev.yml  docker-compose.yml  es-ojt-api.env  es-ojt.env  gunicorn.config.py  pyproject.toml
app/: __main__.py
app/core/: __init__.py  config.py  container.py  dependencies.py  logging.py  middleware.py  status_code.py
app/core/exception/: exception.py  exception_handler.py
app/core/logger/: api_logger.py  base_logger.py  elasticsearch_logger.py
app/elastic_search/: client.py
app/elastic_search/config/: __init__.py  hangeul.py  index.py  parameter.py  template.py
app/elastic_search/engine/: client.py
app/elastic_search/template/: query.py  template.py
app/elasticsearch/: client.py
app/model/: __init__.py
app/model/dto/: autocomplete_dto.py  category_dto.py  news_dto.py  option_dto.py  provider_dto.py  search_dto.py
app/model/enum/: __init__.py  autocomplete.py  category.py  category_enum.py  index.py  (+2 more)
app/router/: autocomplete.py  category.py  option.py  provider.py  search.py
app/service/: autocomplete_service.py  category_service.py  keyword_service.py  option_service.py  provider_service.py  search_service.py
app/storage/: csv_storage.py
data/: providers.csv
data/bylines/: bylines.csv  names1.csv  normal_names.csv
data/index/: news.json  provider.json  reporter.json
docs/: docusaurus.config.js
jupyter notebook/: 1. load news data.ipynb  2. providers.ipynb  4-2. bylines - korean.ipynb  5. reporters.ipynb
(+12 files in other folders)
