[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["CalMaru <cal@42maru.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.5"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.29.4"
pandas = "^2.2.2"
isort = "^5.13.2"
black = "^24.4.0"
flake8 = "^7.0.0"

[tool.black]
line-length = 155
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 155

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
