[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["CalMaru <cal@42maru.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.5"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.1"
fastapi = "^0.110.2"
dependency-injector = "^4.41.0"
gunicorn = "^22.0.0"
uvicorn = "^0.29.0"
pandas = "^2.2.2"
elasticsearch = "7.16.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.29.4"
isort = "^5.13.2"
black = "^24.4.0"
flake8 = "^7.0.0"

[tool.black]
line-length = 155
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 155

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
